--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,15 @@
-# Data manipulation
-pandas>=2.2.0
-numpy>=2.0.0
+# Data Processing
+pandas==2.3.3
+numpy==2.3.5
 
-# Visualization  
-matplotlib>=3.8.0
-seaborn>=0.13.0
-plotly>=5.18.0
+# Visualization
+matplotlib==3.10.2
+seaborn==0.13.2
 
 # Machine Learning
-scikit-learn>=1.4.0
-xgboost>=2.0.0
-lightgbm>=4.3.0
+scikit-learn==1.6.1
+xgboost==3.1.2
 
 # Utilities
-tqdm>=4.66.0
-joblib>=1.3.0
-python-dotenv>=1.0.0
-
-# Jupyter (optional)
-jupyter>=1.0.0
-ipykernel>=6.29.0
+jupyter==1.1.1
+ipython==8.31.0
